coffee-house/css/style.css
/* ... */
.link_underlined.link_hovered:after {
    width: 100%;
    opacity: 1;
}


.link-primary {
    color: var(--text-dark);
    align-items: flex-start;
    font-feature-settings: 'clig' off, 'liga' off;
    font-family: var(--ff-inter);
    font-size: 1rem;
    font-style: normal;
    font-weight: 600;
    line-height: 150%;
    gap: 0.5rem;
}

.link-primary_light {
    color: var(--text-light);
}

.link-primary__icon {
    width: 1.25rem;
    height: 1.25rem;
}

.btn {
    display: inline-block;
    overflow: hidden;
    text-decoration: none;
    cursor: pointer;
    user-select: none;
    text-align: center;
    border: none;
    margin: 0;
    padding: 0;
    background: transparent;
    vertical-align: middle;
}

.btn:disabled {
    cursor: default;
}

.btn_full-width {
    width: 100%;
}

.btn-tab {
    border-radius: 6.25rem;
    padding: 0.5rem 1rem 0.5rem 0.5rem;
    border: 1px solid var(--border-light);
    color: var(--text-dark);
    font-family: var(--ff-inter);
    font-feature-settings: 'clig' off, 'liga' off;
    font-size: 1rem;
    font-style: normal;
    font-weight: 600;
    line-height: 150%;
    transition: 0.5s all ease;
}

.btn-tab_active {
    cursor: default;
}

.btn-tab_active:not(:disabled){
    color: var(--text-light);
    border-color: var(--background-container);
    background-color: var(--background-container);
}

.btn-tab__inner {
    display: flex;
    gap: 0.5rem;
    align-items: center;
}

.btn-tab__icon-wrap {
    flex: none;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 1.875rem;
    height: 1.875rem;
    border-radius: 50%;
    background-color: var(--border-light);
    transition: 0.5s all ease;
}

.btn-tab__icon {
    width: 1rem;
    height: 1.5rem;
}

.btn-primary {
    color: var(--text-dark);
    font-feature-settings: 'clig' off, 'liga' off;
    font-family: var(--ff-inter);
    font-size: 1rem;
    font-style: normal;
    font-weight: 600;
    line-height: 150%;
    padding: 1.25rem;

    background: var(--background-body);
    min-width: 12.5rem;
    border-radius: 6.25rem;
}

.btn-primary__inner {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
}

.btn-primary__text {
    position: relative;
    background: var(--background-body);
}


.btn-primary__icon {
    flex: none;
    width: 1.25rem;
    height: 1.25rem;
}


.btn-secondary {
    color: var(--text-dark);
    text-align: center;
    font-feature-settings: 'clig' off, 'liga' off;
    font-family: var(--ff-inter);
    font-size: 1rem;
    font-style: normal;
    font-weight: 600;
    line-height: 150%;
    border-radius: 6.25rem;
    border: 1px solid var(--border-dark);
    width: minmax(auto, 12.5rem);
    padding: 0.625rem;
    background: var(--white);
    transition: 0.5s all ease;
}

.btn-app {
    color: var(--text-dark);
    text-align: center;
    font-feature-settings: 'clig' off, 'liga' off;
    font-family: var(--ff-inter);
    font-size: 1rem;
    font-style: normal;
    font-weight: 600;
    line-height: 150%;
    border-radius: 6.25rem;
    border: 1px solid var(--border-dark);
    min-width: 12.5rem;
    padding: 0.75rem 1.25rem;
    transition: 0.5s all ease;
}

.btn-app__inner {
    display: flex;
    gap: 0.5rem;
    align-items: center;
}

.btn-app__icon {
    width: 2.25rem;
    height: 2.25rem;
}

.btn-app__small-text {
    font-size: 0.625rem;
    line-height: 140%;
}

.btn-round {
    border-radius: 50%;
    width: 3.75rem;
    height: 3.75rem;
    transition: 0.5s all ease;
}

.btn-round__inner {
    display: flex;
    align-items: center;
    height: 100%;
    justify-content: center;
}

.btn-round__icon {
    width: 1.5rem;
    height: 1.5rem;
}

.btn-round_dark {
    border: 1px solid var(--border-dark);
    color: var(--text-dark);
}

.btn-round_light {
    border: 1px solid var(--border-light);
    color: var(--background-body);
}

.list {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.logo {
    width: 6.25rem;
    height: 3.75rem;
    display: flex;
}

.hamburger {
    border: 1px solid var(--border-dark);
    color: var(--text-dark);
    border-radius: 50%;
    width: 2.75rem;
    height: 2.75rem;
    transition: 0.2s all ease;
}

.hamburger_active .hamburger__inner:before {
    transform: rotate(45deg) translateY(-2.5px)
}

.hamburger_active .hamburger__inner::after {
    transform: rotate(-45deg) translateY(+2.5px);
}

.hamburger__inner {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100%;
    gap: 6px;
}

.hamburger__inner:before,
.hamburger__inner:after {
    display: block;
    content: "";
    width: 16px;
    height: 2px;
    background-color: var(--text-dark);
    border-radius: 1.5px;
    transition: 0.5s ease;
    transform-origin: left;
}

.page {
    margin: 0 auto;
    background-color: var(--background-body);
    max-width: var(--page-max-width);
    min-height: 100%;
    position: relative;
    padding: 1.25rem 0 2.5rem;
}

.page__header {
    margin-bottom: 1.25rem;
}

.page__enjoy {
    margin-bottom: 6.25rem;
}

.page__favourites-coffee {
    margin-bottom: 6.25rem;
}

.page__about {
    margin-bottom: 6.25rem;
}

.page__mobile-app {
    margin-bottom: 6.35rem;
}

.page__menu {
    margin-bottom: 6.25rem;
}

.header {
    display: flex;
    align-items: center;
    gap: 1rem 3.5%;
    padding: 0 2.5rem;
}

.header__home-link {
    flex: none;
}

.header__nav {
    flex: 1 1 auto
}


.header__menu {
    display: flex;
    gap: 1rem 3.5%;
    flex-wrap: wrap;
}


.header__item:first-child {
    margin-left: auto;
}

.header__item:last-child {
    margin-left: auto;
}

.header__toggler {
    display: none;
}

.enjoy {
    color: var(--text-light);
    padding: 0 2.5rem;
}

.enjoy__inner {
    border-radius: 2.5rem;
    padding: 6.25rem;
    background: url("../assets/img/intro/img-hero.jpg") no-repeat center / cover;
}

.enjoy__column {
    max-width: 530px;
}
/* ... */

